Restructure project and add some demo